# clinvar-xml-rs

./: Cargo.toml  README.md
.github/workflows/: release-please.yml  rust.yml
src/: coding.rs  common.rs  main.rs  records.rs  xml_to_tsv.rs
