[package]
name = "clinvar-xml"
version = "0.1.0"
authors = ["Manuel Holtgrewe <manuel.holtgrewe@bih-charite.de>"]
description = "Rust-based implementation of ClinVar XML procesing"
license-file = "LICENSE.md"
homepage = "https://github.com/bihealth/clinvar-xml-rs"
edition = "2021"
readme = "README.md"

[dependencies]
anyhow = { version = "1.0.68", features = ["backtrace"] }
byte-unit = "4.0.18"
chrono = "0.4.23"
clap = { version = "4.1.1", features = ["derive", "help"] }
clap-verbosity-flag = "2.0.0"
flate2 = "1.0.25"
lazy_static = "1.4.0"
log = "0.4.17"
procfs = "0.14.2"
quick-xml = "0.27.1"
shrinkwraprs = "0.3.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[dev-dependencies]
file_diff = "1.0.0"
pretty_assertions = "1"
temp_testdir = "0.2"

[[bin]]
name = "clinvar-xml"
path = "src/main.rs"
